--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.3.0",
     "react-burger-menu": "^2.7.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.22",
     "react-hook-form": "^6.8.1",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
